# testrunner

./: .gitignore  Cargo-stdx.toml  Cargo.toml  README.md  build.rs  cargo-stdx.toml
src/: crates.rs  deser.rs  main.rs  runtest.rs
tests/: stdxtest.rs  tests.rs
