[package]
name = "testrunner"
version = "0.1.0"
authors = ["alisha <anejaalisha@yahoo.com>"]
build = "build.rs"

[dependencies]
tempdir = "0.3"
flate2 = "0.2"
tar = "0.4.13"
reqwest = "0.6.2"
error-chain = "0.10.0"
toml = "0.4"
walkdir = "1"

[build-dependencies]
tempdir = "0.3"
flate2 = "0.2"
tar = "0.4.13"
reqwest = "0.6.2"
error-chain = "0.10.0"
toml = "0.4"
walkdir = "1"
